corrected spacing on room to grow text

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 
 .wrapper {
   width: 65%;
-  margin: 0em 16em;
+  margin: 0em 15em;
   font-family: 'Merriweather', sans-serif;
   font-size: 1em;
   line-height: 2em;
@@ -244,7 +244,7 @@ body {
   position: absolute;
   padding: 0;
   bottom: 1em;
-  left: 5em;
+  left: 7em;
 }
 
 .birdhouse {
